# notemancy

./: .gitignore  Cargo.toml
src/: config.rs  crud.rs  edit.rs  main.rs  picker.rs  publish.rs  vectorize.rs
