[package]
name = "notemancy"
version = "0.1.0"
edition = "2024"
authors = ["Rishikanth Chandrasekaran rishikanthc@gmail.com"]
description = "A CLI tool for PKM"
license = "MIT"
readme = "README.md"
repository = "https://github.com/notemancy-pkm/notemancy"


[[bin]]
name = "ncy"
path = "src/main.rs"

[dependencies]
notemancy-core = "0.1.0"
hddb = "0.2.0"
# notemancy-core = { path = "../notemancy-core" }
# hddb = { path = "../../new/hddb" }
inquire = "0.7.5"
nucleo-picker = "0.8.1"
tokio = { version = "1.44.1", features = ["full"] }
tch = "0.17"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = "1.0.219"

# [dev-dependencies]
# assert_cmd = "2.0"
# predicates = "2.1"
# tempfile = "3.3"
